# text-to-movie

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
