[build-system]
requires = ["setuptools>=61.0", "wheel"]  
build-backend = "setuptools.build_meta"   

[project]
name = "text-to-movie"                       
version = "0.1.0"                        
description = "produce a movie from text description"   
readme = "README.md"                      
requires-python = ">=3.10"
license = {file = "Apache 2.0"}              
authors = [
    {name = "Shutian Ma", email = "your_email@example.com"}
] 
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]                                        
[project.scripts]
bfcl = "bfcl.__main__:cli"


[tool.setuptools.packages.find]                
include = ["src*"]                       


